removed some class="black". Added a missing color. Found an issue with PR from DWR-1097 when I removed boolean-toggle

--- a/webapp/src/main/webapp/src/styles.less
+++ b/webapp/src/main/webapp/src/styles.less
@@ -103,6 +103,9 @@ h1 + p.pull-left, .h1 + p.pull-left, h2 + p.pull-left, .h2 + p.pull-left, h3 + p
   color: @gray-mid;
 }
 
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+  color: @gray-mid;
+}
 // ------------------------------
 // RDW Custom Styles to Match Comps
 // ------------------------------
